--- a/login/styles.css
+++ b/login/styles.css
@@ -1,256 +1,162 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+:root {
+    --primario: #D9D9D9;
+    --primarioSecundario: #ECF0F1;
+    --primarioOscuro: #282826;
+    --secundario: #EA5656;
+    --terciario: #110F36;
+    --approved: green;
+    --denied: red;
+    --blanco: #FAFAFA;
+    --negro: #000;
+    --shadow: rgba(0, 0, 0, 0.500);
+    --bluegrey: #E7EDFB;
+    --grey: #909497;
+    --fuentePrincipal: "Ubuntu", sans-serif;
+    }
 
-body,
-input {
-    font-family: 'Courier New', Courier, monospace;
-}
+/* POPPINS FONT */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-.container {
-    position: relative;
-    width: 100%;
-    background-color: #fff;
-    min-height: 100vh;
-    overflow: hidden;
+*{
+    font-family: 'Poppins', sans-serif;
 }
-
-.forms-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+.wrapper{
+    background: var(--blanco);
+    padding: 0 20px 0 20px;
 }
-
-.container::before {
-    content: '';
-    position: absolute;
-    height: 2000px;
-    width: 2000px;
-    top: -10px;
-    right: 48%;
-    background-image: linear-gradient(-45deg, #20dbc2 0%, #00bfa6 100%);
-    transform: translateY(-50%);
-    border-radius: 50%;
-    z-index: 6;
-    transition: 1.8s ease-in-out;
-}
-
-form {
+.main{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding:  0 5rem;
-    padding:  0 5rem;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    min-height: 100vh;
 }
-
-.title {
-    font-size: 2.2rem;
-    color: #444;
-    margin-bottom: 10px;
-}
-
-.input-field {
-    max-width: 380px;
-    width: 100%;
-    height: 55px;
-    background-color: #f0f0f0;
-    margin: 10px 0;
-    border-radius: 55px;
-    display: grid;
-    grid-template-columns: 15% 85%;
-    padding: 0 0.4rem;
+.side-image{
+    background-image: url("img/Rectangle\ 81\(1\).png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px 0 0 10px;
     position: relative;
 }
+.row{
+  width:  900px;
+  height:550px;
+  border-radius: 10px;
+  background: var(--bluegrey);
+  padding: 0px;
+  box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
+}
 
-.input-field i {
+i{
+    font-weight: 400;
+    font-size: 15px;
+}
+.right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.input-box{
+  width: 330px;
+  box-sizing: border-box;
+}
+img{
+    width: 35px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+.input-box header{
+    font-weight: 700;
     text-align: center;
-    line-height: 55px;
-    color: #acacac;
-    font-size: 1.5rem;
+    margin-bottom: 45px;
+    text-transform: uppercase;
+    font-size: 2rem;
 }
-
-.input-field input {
-    background: none;
-    outline: none;
+.input-field{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 0 10px 0 10px;
+}
+.input{
+    height: 45px;
+    width: 100%;
+    background: transparent;
     border: none;
-    line-height: 1;
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: #333;
-}
-
-.input-field input:placeholder-shown 
-{
-    color: #aaa;
-    font-weight: 500;
-}
-
-.btn {
-    width: 150px;
-    height: 49px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
+    margin-bottom: 20px;
+    color: var(--primarioOscuro);
+}
+.input-box .input-field label{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    pointer-events: none;
+    transition: .5s;
+}
+.input-field input:focus ~ label
+   {
+    top: -10px;
+    font-size: 13px;
+  }
+  .input-field input:valid ~ label
+  {
+   top: -10px;
+   font-size: 13px;
+   color: var(--terciario);
+ }
+ .input-field .input:focus, .input-field .input:valid{
+    border-bottom: 1px solid var(--terciario);
+ }
+ .submit{
     border: none;
-    border-radius: 48px;
-    background-color: #20dbc2;
-    color: white;
+    outline: none;
+    height: 45px;
+    background: var(--grey);
+    border-radius: 45px;
+    transition: 0.4s all ease-in-out;
     text-transform: uppercase;
     font-weight: 600;
-    margin: 10px 0;
-    transition: all 0.5s;
-}
-
-.btn:hover {
-   background-color: #00bfa6; 
-}
-
-.social-text {
-    padding: 0.7rem 0;
-}
-
-.social-media {
-    display: flex;
-    justify-content: center;
-}
-
-.social-icon {
-    height: 46px;
-    width: 46px;
-    border: 1px solid #333;
-    margin: 0 0.45rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    font-size: 1.3rem;
-    border-radius: 50%;
-    transition: all 0.5s;
-}
-
-.social-icon:hover {
-    color: #20dbc2;
-    border-color: #00bfa6;
-}
-
-.signin-signup{
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-columns: 1fr;
-    z-index: 5;
-}
-
-form.sign-in-form {
-    z-index: 2;
-}
-
-form.sign-up-form {
-    z-index: 1;
-    opacity: 0;
-}
-
-.image {
-    width: 100%;
-    transition: 1.1s 0.4s ease-in-out;
-}
-
-.panels-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.panel {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 7;
-}
-
-.left-panel {
-    padding: 3rem 17% 2rem 12%;
-}
-
-.right-panel {
-    padding: 3rem 12% 2rem 17%;
-}
-
-.panel .content {
-    color: #fff;
-    transition: 0.9s 0.6s ease-in-out;
-}
-
-.panel h3 {
-    font-weight: 600;
-    line-height: 1;
     font-size: 1.5rem;
+    color: var(--blanco);
+    background-color: var(--terciario);
+ }
+ .submit:hover{
+    background: var(--blanco);
+    color: var(--terciario);
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
+ }
+ .signin{
+    text-align: center;
+    font-size: small;
+    margin-top: 25px;
+}
+span a{
+    text-decoration: none;
+    font-weight: 700;
+    color: #000;
+    transition: .5s;
+}
+span a:hover{
+    text-decoration: underline;
+    color: var(--terciario);
 }
 
-.panel p {
-    font-size: 0.95rem;
-    padding: 0.7rem 0;
-}
-
-.btn.transparent {
-    margin: 0;
-    background: none;
-    border: 2px solid #fff;
-    width: 130px;
-    height: 41px;
-    font-weight: 600;
-    font-size: 0.8rem;
-}
-
-.right-panel .content,
-.right-panel .image{
-    transform: translateX(800px);
-}
-
-/* Animation */
-
-.container.sign-up-mode::before {
-    transform: translate(100%, -50%);
-    right: 52%;
-}
-
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
-    transform: translate(-800px);
-}
-
-.container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content {
-    transform: translateX(0%);
-}
-
-.container.sign-up-mode .left-panel {
-    pointer-events: none;
-}
-
-.container.sign-up-mode .right-panel {
-    pointer-events: all;
-}
-
-.container.sign-up-mode .signin-signup {
-    left: 25%;
-}
-
-.container.sign-up-mode form.sign-in-form {
-    z-index: 1;
-    opacity: 0;
+@media only screen and (max-width: 768px){
+    .side-image{
+        border-radius: 10px 10px 0 0;
+    }
+    img{
+        width: 35px;
+        position: absolute;
+        top: 20px;
+        left: 47%;
+    }
+    .row{
+        max-width:420px;
+        width: 100%;
+    }
 }
