--- a/frontend/main-page/src/styles/login.css
+++ b/frontend/main-page/src/styles/login.css
@@ -1,171 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap');
+
+:root{
+    --primary: #c2f84f;
+    --secondary: #a7d9a1;
+    --accent: #97a68c;
+    --text: #272725;
+    --textsec: #939393;
+    --background: #fafafafa;
+    --approved: green;
+    --denied: red;
+    --shadow: rgba(0, 0, 0, 0.250);
+    --fuente: "Lexend Exa", sans-serif;
+}
+
 
 * {
-    padding: 0;
+    font-family: var(--fuente);
     margin: 0;
-    box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
 }
 
-.login-form {
-    position: relative;
-    min-height: 100vh;
-    z-index: 0;
-    background: #C2F84E;
-    padding: 30px;
-    justify-content: center;
-    display: grid;
-    font-family: 'poppins', sans-serif;
-
-    grid-template-rows: 1fr auto 1fr;
-    align-items: center;
-}
-
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.login-form h1 {
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: black;
-    font-family: 'poppins', sans-serif;
-
-}
-
-.login-form h2 {
-    line-height: 40px;
-    margin-bottom: 5px;
-    font-size: 30px;
-    font-weight: 500;
-    color: #272346;
-    text-align: center;
-}
-
-.login-form .main {
-    position: relative;
+.background{
     display: flex;
-    margin: 30px 0;
-}
-
-.content {
-    flex-basis: 50%;
-    padding: 3em 3em;
-    background: #fafafa;
-    box-shadow: 2px 9px 49px -17px rgba(0, 0, 0, 0.1);
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
-
-.form-img {
-    flex-basis: 50%;
-    background: #fafafa;
-    background-size: cover;
-    padding: 40px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+    justify-content: center;
     align-items: center;
-    display: grid;
+    background-color: var(--accent);
+    height: 768px;
+    width: 1366px;
 }
 
-.form-img img {
-    max-width: 100%;
+.leftPart{
+    width: 463px;
+    display:flex;
+    justify-content:space-evenly;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--text);
+    height: 550px;
+    border-radius: 15px 0px 0px 15px;
 }
 
-p {
-    color: black;
-    font-size: 16px;
-    line-height: 25px;
-    opacity: 0.6;
-    text-align: center;
-    font-weight: 500;
+.leftPart form{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
-.btn,
-button,
-input {
-    border-radius: 35px;
+.leftPart form input {
+    height: 40px;
+    width: 300px;
+    border-radius: 50px;
+    border: none;
+    outline-style: none;
+    padding: 0 10px;
 }
 
-.btn:hover,
-button:hover {
-    color: black;
-    transform: scale(1.1);
+.leftPart button{
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    background-color: var(--secondary);
 }
 
-a {
+.leftPart button a{
+    color: var(--text);
+    text-decoration: none;
+    font-size: medium;
+    font-weight: 600;
+}
+
+.leftPart #Login {
+    font-size: xx-large;
+    margin: 0;
+}
+
+.leftPart p {
+    font-size: small;
+}
+
+.leftPart p a{
+    margin: 15px;
+    color: var(--background);
     text-decoration: none;
 }
 
-.login-form form {
-    margin: 30px 0;
+.leftPart p a:hover{
+    color: var(--primary);
 }
 
-.login-form input {
-    outline: none;
-    margin-bottom: 15px;
-    font-stretch: 16px;
-    color: black;
-    text-align: left;
-    padding: 14px 20px;
-    width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-    border: none;
-    background: #f7fafc;
-    transition: 0.3s ease;
+.rightPart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background);
+    height: 550px;
+    width: 463px;
+    border-radius: 0px 15px 15px 0px;
 }
 
-.login-form input:focus {
-    background: transparent;
-    border: 1px solid #C2F84E;
+.rightPart img{
+    width: 75%;
 }
 
-.login-form button {
-    font-size: 18px;
-    color: black;
-    width: 100%;
-    background: #C2F84E;
-    border: none;
-    padding: 14px 15px;
-    font-weight: 600;
-    transition: 0.3s ease;
-}
-
-p.account a {
-    color: black;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-p.account a:hover {
-    text-decoration: underline;
-}
-
-@media(max-width:736px) {
-    .login-form .main {
-        flex-direction: column;
-    }
-
-    .login-form form {
-        margin-top: 30px;
-        margin-bottom: 10px;
-    }
-
-    .form-img {
-        border-radius: 0;
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;
-        order: 2;
-    }
-
-    .content {
-        order: 1;
-        border-radius: 0;
-        border-top-left-radius: 8px;
-        border-top-right-radius: 8px;
-    }
-
+.rightPart img:hover{
+    transform: scale(1.1);
 }
