--- a/frontend/main-page/src/styles/cards.css
+++ b/frontend/main-page/src/styles/cards.css
@@ -1,30 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 :root{
-    --primario: #D9D9D9;
-    --primarioSecundario: #ECF0F1;
-    --primarioOscuro: #282826;
-    --secundario: #EA5656;
-    --terciario: #110F36;
+    --primary: #c2f84f;
+    --secondary: #a7d9a1;
+    --accent: #97a68c;
+    --text: #272725;
+    --textsec: #939393;
+    --background: #fafafafa;
     --approved: green;
     --denied: red;
-    --blanco: #FAFAFA;
-    --negro: #000;
-    --shadow: rgba(0, 0, 0, 0.500);
-    --grey: #909497;
-    --fuentePrincipal: "Ubuntu", sans-serif;
+    --shadow: rgba(0, 0, 0, 0.250);
+    --fuente: "Lexend Exa", sans-serif;
 }
 
 .card-background {
-    background-color: var(--background);
-    border-radius: 1rem;
-    width: 12rem;
-    height: 16rem;
-    filter: drop-shadow(0px 0px 2.5px var(--shadow));
-    box-sizing: content-box;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--background);
+    border-radius: 1rem;
+    width: 12rem;
+    height: 17rem;
+    filter: drop-shadow(0px 0px 2.5px var(--shadow));
+    box-sizing: content-box;
     flex-direction: column;
     padding: 0.5rem;
     contain: content;
@@ -38,18 +36,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width:75%; 
+    width:100%; 
     contain: content;
 }
 
 .card-image img{
-    width: 100%;
+    margin: 0 auto;
+    width: 75%;
 }
 
 .card-text{
     width: 100%;
     contain: content;
+}
+
+.card-text p{
     text-align: center;
+    color: var(--text);
+    font-size: smaller;
 }
 
 .card-info{
@@ -58,13 +62,13 @@
   align-items: center;
   width: 100%;
   contain: content;
-  gap: 1px;
+  gap: 0.5rem;
 }
 
 .card-info .material-symbols-outlined {
     padding: 1px;
     text-align: center;
-    font-size: 20px;
+    font-size: medium;
     color: var(--text);
   font-variation-settings:
   'FILL' 1,
@@ -84,12 +88,14 @@
 
 .card-price p {
     margin: 0;
-    font-size: 30px;
+    font-size:xx-large;
     font-weight: 500;
+    color: var(--text);
 }
 
 .card-price .currency {
-    font-size: 20px;
+    font-size: small;
+    color: var(--text);
 }
 
 .card-shipping{
@@ -102,7 +108,10 @@
 
 
 .card-shipping p {
-    color: var(--textsec);
+    margin: 0 auto;
+    padding-bottom: 15px;
+    color: var(--text);
+    font-size: small;
 }
 
 .cards-container{
@@ -114,5 +123,5 @@
     flex-direction: row;
     grid-template-columns: repeat(5, auto);
     grid-template-rows: repeat(2, 17.5rem);
-    gap: 1rem;
+    gap: 2rem;
 }
