Se hacen cambios leves
Se realizan algunos cambios para poder trabajar con el equipo de Backend

--- a/frontend/main-page/src/App.css
+++ b/frontend/main-page/src/App.css
@@ -19,12 +19,12 @@
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
+  display: block;
   background-color: #fafafafa;
   justify-content: center;
   align-items: center;
   contain: content;
-  overflow: auto;
 }
 
 p {
