--- a/frontend/main-page/src/styles/landingpage.css
+++ b/frontend/main-page/src/styles/landingpage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap');
+
 :root{
     --primary: #c2f84f;
     --secondary: #a7d9a1;
@@ -11,38 +13,11 @@
     --fuente: "Lexend Exa", sans-serif;
 }
 
-
-.contenedor-header{
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
+*{
+    font-family: var(--fuente);
 }
 
-.contenedor-header a{
-    display: inline-block;
-    text-decoration: none;
-    color: var(--primarioOscuro);
-    font-size: 18px;
-    padding: 25px 25px;
-    font-weight: bold;
-}
-
-hr {
-    margin: 0 auto;
-    width: 1450px;
-    border: 1px solid #000;
-}
-
-body {
-    font-family: var(--fuentePrincipal);
-    background-color: var(--blanco);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.contenedor-general {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,9 +28,9 @@ body {
     position: relative;
 }
 
-.contenedor-presentacion {
+.presentation {
     display: flex;
-    background-color: #282826;
+    background-color: var(--text);
     width: 90%;
     height: 500px;
     margin-top: 300px;
@@ -111,7 +86,7 @@ img{
     margin-right: 20px;
 }
 
-.contenedor-parrafo{
+.context{
     display: flex;
     justify-content: flex-end; 
     align-items: center;
@@ -122,7 +97,7 @@ img{
 
 p {
     color: white;
-    font-size: 28px;
+    font-size:larger;
     line-height: 1.6;
     margin-top: 10px;
     position: relative;
@@ -130,7 +105,7 @@ p {
     text-align: left;
 }
 
-.contenedor-bottoms {
+.buttons {
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -140,7 +115,7 @@ p {
     position: absolute;
 }
 
-.contenedor-bottoms a {
+.buttons a {
     display: flex; 
     justify-content: center; 
     align-items: center; 
@@ -156,26 +131,22 @@ p {
     font-weight: bold;
 }
 
-.contenedor-final{
+.banners-cont{
     margin-top: 140%;
     position: absolute;
     justify-content: center;
     align-items: center;
 }
 
-.contenedor-banner1 img{
+
+.banner img{
     display: flex;
     width: 90%;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    padding: 50px;
 }
 
-.contenedor-banner2 img{
-    display: flex;
-    width: 90%;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+@media (min-width: 1025px){
+
 }
