--- a/frontend/main-page/src/styles/snackbar.css
+++ b/frontend/main-page/src/styles/snackbar.css
@@ -12,14 +12,21 @@
 }
 
 .ad {
-    margin: 35px;
-    position: sticky;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
     background-color: var(--text);
-    padding: 15px;
-    border-radius: 35px;
+    padding: 5px;
+    border-radius: 15px;
     width: 50%;
+    z-index: 6;
+    left: 50%;
+    top: 5%;
+    transform: translate(-50%, -50%);
 }
 
 .ad p {
+    text-align: center;
     color: var(--background)
 }
