--- a/frontend/main-page/src/styles/uploadProduct.css
+++ b/frontend/main-page/src/styles/uploadProduct.css
@@ -1,16 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap');
+
 :root {
-    --primario: #D9D9D9;
-    --primarioSecundario: #ECF0F1;
-    --primarioOscuro: #282826;
-    --secundario: #EA5656;
-    --terciario: #110F36;
+    --primary: #c2f84f;
+    --secondary: #a7d9a1;
+    --accent: #97a68c;
+    --text: #272725;
+    --textsec: #939393;
+    --background: #fafafafa;
     --approved: green;
     --denied: red;
-    --blanco: #FAFAFA;
-    --negro: #000;
-    --shadow: rgba(0, 0, 0, 0.500);
-    --grey: #909497;
-    --fuentePrincipal: "Ubuntu", sans-serif;
+    --shadow: rgba(0, 0, 0, 0.250);
+    --fuente: "Lexend Exa", sans-serif;
 }
 
 * {
@@ -18,17 +18,17 @@
     padding: 0;
     transition: ease-in-out 250ms;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
-body {
+/* body {
     display: flex;
     flex-direction: column;
     height: 160vh;
     margin: 0;
     background-color: #f4f4f4;
-    padding-top: 60px; /* Ajusta el relleno superior para compensar el header fijo */
-}
+    padding-top: 60px;
+    /* Ajusta el relleno superior para compensar el header fijo
+} */
 
 header {
     display: flex;
@@ -51,11 +51,13 @@ header {
     width: 10rem;
     border-radius: 0rem 0rem 3rem 0rem;
     gap: 3rem;
-    border: none; /* Elimina el borde por defecto de los botones */
+    border: none;
+    /* Elimina el borde por defecto de los botones */
     color: var(--primarioOscuro);
     font-weight: bold;
     font-size: 1rem;
-    text-decoration: none; /* Asegura que el texto dentro de .Go-back no tenga subrayado */
+    text-decoration: none;
+    /* Asegura que el texto dentro de .Go-back no tenga subrayado */
     cursor: pointer;
 }
 
@@ -64,27 +66,29 @@ header {
 }
 
 a {
-    text-decoration: none; 
+    text-decoration: none;
 }
 
 .items {
-    display: flex; /* Asegura que los ítems estén en una fila */
-    gap: 30px; /* Espacio entre los ítems */
+    display: flex;
+    /* Asegura que los ítems estén en una fila */
+    gap: 30px;
+    /* Espacio entre los ítems */
     margin-right: 2rem;
 }
 
-.items a{
+.items a {
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
     color: black;
 }
 
-.items .account:hover{
+.items .account:hover {
     filter: drop-shadow(0px 0px 10px var(--shadow));
 }
 
-.items .ayuda:hover{
+.items .ayuda:hover {
     filter: drop-shadow(0px 0px 10px var(--shadow));
 }
 
@@ -96,7 +100,8 @@ a {
     justify-content: center;
     width: 100%;
     padding: 20px;
-    gap: 10px; /* Espacio entre la imagen y el formulario */
+    gap: 10px;
+    /* Espacio entre la imagen y el formulario */
 }
 
 .form-details {
@@ -104,7 +109,7 @@ a {
     flex-direction: column;
     justify-content: center;
     gap: 10px;
-    width: 50%; 
+    width: 50%;
     margin-top: 2rem;
 }
 
@@ -154,15 +159,18 @@ a {
     padding: 10px;
     text-align: center;
     cursor: pointer;
-    width: 100%; /* Asegura que el contenedor de la imagen use todo el ancho disponible */
-    max-width: 300px; /* Define un ancho máximo para el contenedor de la imagen */
-    margin: 0 auto 20px; /* Centra el div horizontalmente y agrega margen inferior */
+    width: 100%;
+    /* Asegura que el contenedor de la imagen use todo el ancho disponible */
+    max-width: 300px;
+    /* Define un ancho máximo para el contenedor de la imagen */
+    margin: 0 auto 20px;
+    /* Centra el div horizontalmente y agrega margen inferior */
     align-items: center;
     display: flex;
     justify-content: center;
 }
 
-#drop-area{
+#drop-area {
     width: 100%;
     height: 100%;
 }
@@ -172,27 +180,33 @@ a {
     height: 150px;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center; 
+    background-position: center;
 }
 
 @media (max-width: 768px) {
-    #img-view p, #img-view .span {
+
+    #img-view p,
+    #img-view .span {
         font-size: 12px;
     }
-    
+
 }
 
 @media (max-width: 442px) {
-    #img-view .material-symbols-outlined{
+    #img-view .material-symbols-outlined {
         scale: 0.8;
     }
-    #img-view p, #img-view .span {
+
+    #img-view p,
+    #img-view .span {
         font-size: 8px;
     }
+
     .hero {
         max-width: 200px;
         height: 7.5rem;
     }
+
     #drop-area {
         padding-bottom: 10px;
     }
